# pglance

./: .dockerignore  .gitignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  TESTING.md  build_and_test.sh  demo.sql  end_to_end_test.py  init-pglance.sh  justfile  pg_regress  pglance.control  pyproject.toml
.github/: README.md
.github/workflows/: integration-tests.yml  python-checks.yml  release.yml  rust-checks.yml  security.yml
integration_tests/: README.md  integration_test.py  pyproject.toml  run_tests.sh
integration_tests/docker/: Dockerfile  README.md  docker-compose.yml  init-pglance.sh
pg_regress/sql/: setup.sql
sql/: bootstrap.sql
src/: lib.rs
src/scanner/: lance_scanner.rs  mod.rs
src/types/: arrow_convert.rs  conversion.rs  mod.rs
