[project]
name = "pglance-tests"
version = "0.1.0"
description = "Python environment for testing pglance PostgreSQL extension"
readme = "README.md" # Assuming you might add one later for the Python part
requires-python = ">=3.8"
license = {text = "MIT"} # Or your preferred license

dependencies = [
    "pylance",
    "pyarrow",
    "psycopg2-binary",
]

[tool.uv]
# This section can be used for uv specific configurations if needed in the future