[project]
name = "pglance-integration-tests"
version = "0.1.0"
description = "Integration tests for pglance PostgreSQL extension"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "pylance",
    "pyarrow",
    "psycopg2-binary",
]

[tool.uv]
# This section can be used for uv specific configurations if needed in the future