[project]
name = "pglance-integration-tests"
version = "0.1.0"
description = "Integration tests for pglance PostgreSQL extension"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "pylance",
    "pyarrow",
    "psycopg2-binary",
    "ruff",
]

[tool.uv]
# This section can be used for uv specific configurations if needed in the future

[tool.ruff]
# Python version
target-version = "py38"

# Enable specific linting rules
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

# Ignore specific rules if needed
lint.ignore = [
    "E501",  # line too long (handled by formatter)
]

# Exclude directories
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "testdata",
]

# Line length
line-length = 88

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use spaces around = in keyword arguments
skip-magic-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"integration_test.py" = ["E402"]  # Allow imports after other statements in test files